# saddle-procgen-mesh-ops

./: Cargo.toml  README.md  __data.json  index.html
_app/: version.json
_app/immutable/chunks/: BgUbEDSQ.js  Bs2d8EMR.js  CMRUro8F.js  Cgr9K6zK.js  DxAfs5N0.js
_app/immutable/entry/: app.CpTQ_SbY.js  start.BSs3EXWN.js
_app/immutable/nodes/: 0.gay9_P-B.js  1.fEge0bN2.js  2.Bv9WoXGU.js  3.Dl7F3cy1.js  4.DLA5Bxdi.js
demo/basic/: index.html
demo/csg_boolean/: index.html
demo/extrude/: index.html
demo/lab/: index.html
demo/perf/: index.html
demo/runtime/: index.html
demo/subdivision/: index.html
demos/basic/: index.html
demos/csg_boolean/: index.html
demos/extrude/: index.html
demos/lab/: index.html
demos/perf/: index.html
demos/runtime/: index.html
demos/subdivision/: index.html
docs/: algorithms.md  architecture.md  configuration.md
docs/algorithms/: __data.json  index.html
docs/algorithms.md/: __data.json  index.html
docs/architecture/: __data.json  index.html
docs/architecture.md/: index.html
docs/configuration/: __data.json  index.html
docs/configuration.md/: index.html
examples/: Cargo.toml
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/csg_boolean/: Cargo.toml
examples/csg_boolean/src/: main.rs
examples/extrude/: Cargo.toml
examples/extrude/src/: main.rs
examples/lab/: Cargo.toml  README.md
examples/lab/src/: main.rs
examples/lab/src/e2e/: mod.rs
examples/perf/: Cargo.toml
examples/perf/src/: main.rs
examples/runtime/: Cargo.toml
examples/runtime/src/: main.rs
examples/subdivision/: Cargo.toml
examples/subdivision/src/: main.rs
src/: attributes.rs  boolean.rs  boolean_tests.rs  components.rs  conversion.rs  conversion_tests.rs  debug.rs  error.rs  ids.rs  iterators.rs  iterators_tests.rs  lib.rs  mesh.rs  mesh_tests.rs  messages.rs  operations.rs  operations_tests.rs  resources.rs  simplify.rs  simplify_tests.rs  systems.rs  systems_tests.rs  topology.rs  topology_tests.rs
