[package]
name = "saddle-procgen-mesh-ops"
version = "0.1.0"
edition = "2024"
publish = false
repository = "https://github.com/julien-blanchon/saddle-procgen-mesh-ops"
license = "MIT-0"
description = "Runtime mesh topology editing and mesh processing for Bevy"

[dependencies]
bevy = { version = "0.18", features = ["serialize"] }
thiserror = "2.0"

[workspace]

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
