[workspace]
members = [
    "basic",
    "extrude",
    "subdivision",
    "runtime",
    "perf",
    "lab",
]
resolver = "3"

[workspace.dependencies]
bevy = { version = "0.18", features = ["serialize"] }
saddle-procgen-mesh-ops = { path = ".." }

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
collapsible_if = "allow"
